feat: Get Event by ID (#17)
* feat: Get Event by ID

* docs/Get EventをAPI Documentに追加

---------
